# duplicate-checker-rust

./: .gitignore  Cargo.toml  README.md  main.rs  output.txt
duplicate-checker/: Cargo.toml
duplicate-checker/src/: main.rs
src/: deletion_manager.rs  duplicate_package.rs  file_data_img.rs  file_data_mov.rs  main.rs
