[package]
name = "duplicate-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitignore = "1.0.7"
glob = "0.3.0"
sha2 = "0.10.2"
kamadak-exif = "0.5.4"
image = "0.24.3"
opencv = "0.67.0"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[profile.dev]
opt-level = 3
overflow-checks = false
